Add Azure Web App plugin to pom.xml
Added Azure Web App Maven plugin and updated configurations.

Signed-off-by: TrHuy-0000 <166635906+TrHuy-0000@users.noreply.github.com>